# spigot-build-tools

./: .gitignore  Cargo.toml  README.md
src/: cmd.rs  fs.rs  git.rs  lib.rs
test/: test.sh  test_err.sh
